# DWGtoShp

./: .gitignore  DWGtoShp.spec  README.md  app.py  build_exe.ps1  cli_app.py  dwg-to-shp-cli.spec  pyproject.toml  requirements.txt  sample.dxf
src/dwg_to_shp/: __init__.py  cli.py  converter.py  gui.py
test_output_exe/: sample_lines.dbf  sample_lines.shp  sample_lines.shx  sample_polygons.shx
test_output_py/: sample_points.dbf  sample_polygons.dbf  sample_polygons.shp
